# Persona-Sleuth

./: .env.example  pyproject.toml
app/: main.py
app/graph/: edges.py  nodes.py  state.py
app/services/: face_embed.py
services/: name_search.py
